@startuml
'https://plantuml.com/class-diagram

Gender            ..          Student
Student         }|..||        Class
Student         ||..|{        CurrentLesson
Teacher           ..          CurrentLesson
CurrentLesson   }|..||        Subject
CurrentLesson   ||..||        Room
Room            ||..|{        Seat
Seat            }|..||        SeatOrder

enum Gender{
Male
Female
Diverse
}

class Student{
studentID: Long PK
classID: Class PK FK
userName: String
firstName: String
lastname: String
gender: Gender
}

class Class{
classID: Long PK
className: String
classTeacher: Teacher
room: Room
}

class Subject{
subjectID: Long
subjectName: String
}

class CurrentLesson{
studentID: Student PK FK
subjectID: Subject PK FK
timestamp: localdatetime
}

class Teacher{
teacherID: Long PK
classID: Class PK FK
userName: String
firstName: String
lastname: String
gender: Gender
}

class Room{
roomID: Long PK
roomName: String
classID: Class PK FK
}


class Seat{
seatID: Long PK
seatNr: Long
studentID: Student PK FK
}

class SeatOrder{
seatID: Seat PK FK
subjectID: Subject PK FK
}



@enduml

abstract class AbstractList
abstract AbstractCollection
interface List
interface Collection

List <|-- AbstractList
Collection <|-- AbstractCollection

Collection <|- List
AbstractCollection <|- AbstractList
AbstractList <|-- ArrayList

class ArrayList {
Object[] elementData
size()
}

enum TimeUnit {
DAYS
HOURS
MINUTES
}


Student             }|..||     CurrentLesson
CurrentLesson   }|..||     Subject
Student             }|..||     Class
Class             ||..||      Room:1..1
Room               ||..|{      Seat:1..n
Seat          }|..||      SeatOrder:n..1

/////////////////////////////////////////////////////////

Student             }|..||     StudentFach
StudentFach   }|..||           Subject
Student             }|..||     Class
CurrentLesson   ||..||     Room
Room               ||..|{      Seat:1..n
Seat          }|..||      SeatOrder:n..1